--- a/1. Installing Linux.md
+++ b/1. Installing Linux.md
@@ -77,8 +77,136 @@ To use the USB as a medium to install Linux, the USB must first be made bootable
 Once completed, you will have a bootable USB drive that you can use to run and install Linux.
 
 ### Booting from the USB 
-To install the Linux operating system, you will need to have the USB drive plugged in while booting up the PC. You will also need to know which key to press to enter the Boot Menu. Once the computer has begun to start up you will need to click that key like your life depends on it.
+To install the Ubuntu operating system, you will need to have the USB drive plugged in
+while booting up the PC. You will also need to know which key to press to enter the Boot
+Menu. Once the computer has begun to start up you will need to click that key like your
+life depends on it.
 
+Please refer to the [How to access your BIOS/Boot
+menu](#How-to-access-your-BIOS/Boot-menu) section for details on how to access your
+BIOS/Boot Menu.
+
+Once you've found yourself at the Boot Menu (in the BIOS) you will either need to move the **Boot from USB drive** to the **top of the list**, or select **USB drive**.
+
+If the install for Linux doesn't appear and the computer still runs Windows, you can temporarily disable the **Windows boot manager** in the BIOS, then try again.
+
+**Note:** It is a good idea to make a note of which BIOS settings you have altered or take
+a photo of your screen with your phone before you start changing things, so you undo anything later.
+
+### Linux Install
+Once your PC has booted from the USB drive, you will see a purple GNU which you can use to select to boot Ubuntu.
+
+You will be given the option to either run Linux without installation, or to install Linux. Selecting install Linux will take you to the installation guide. You can then pick to install Linux alongside your OS or to erase your disk and install Linux (this will wipe out your current OS along with any files you have such that the only thing is Linux).
+![Ubuntu_choice](Linux_guide_pics/Ubuntu_choice.png)
+
+**Warning:** We recommend thinking carefully about whether to run Linux alongside your OS (dual boot), or to erase the disk (erase Windows and all your files), before picking an option, as it will be extremely difficult to change your mind after the process is done. You have been warned!!
+
+Once you have been through the install process and installed Ubuntu please go to 
+[Some important things to know once Ubuntu is Installed](#Some-important-things-to-know-once-Ubuntu-is-Installed)
+
+
+## Installation via virtual machine
+If preparing a bootable disk and running it on your PC is too much of a hassle, then you
+could, alternatively, run Linux via a virtualisation on your PC. To do this, you will need
+to download a virtual machine such as **VMware**. 
+
+Intel Mac users. Instructions are given below for VMWare Player, if you are on an Intel
+Mac you should be able to use [VMWare Fusion](https://www.vmware.com/products/fusion.html)
+or VirtualBox. Instructions are provided for VirtualBox installation (please read the Note
+about VirtualBox below for the link to the guide and for some further information), which
+should be the same whether you are on Mac or Windows, but they have only been tested on
+Windows and Linux host machines. 
+
+Regardless of the software you use to run your VM, you need to **make sure virtualisation is
+enabled in your BIOS** otherwise you will receive errors which reference either Intel®
+Virtualization Technology VT-x (for Intel processors) or AMD-V (AMD processors). If you
+have an Intel Mac you do not have to do this, it should be enabled by default.
+
+Please refer to the [How to access your BIOS/Boot
+menu](#How-to-access-your-BIOS/Boot-menu) section for details on how to access your
+BIOS.
+
+Which menu you have to access to turn virtualisation on differs greatly from manufacturer to
+manufacturer. The best thing to do is to use the search engine of your choice to look up
+"*<your PC/Laptop model> virtualisation enable BIOS*". Here is an [external
+link](https://2nwiki.2n.cz/pages/viewpage.action?pageId=75202968) with a pretty
+comprehensive list of PC manufacturers and a description of how to enable virtualisation.
+
+*Note: if you are unable to use VMWare because you use an IT managed PC/Laptop and have to
+use VirtualBox, follow the [**Installing VirtualBox guide** in this
+repo](Installing%20VirtualBox.md). We **strongly** recommend not using VirtualBox if you
+are new to virtual machines and have a choice, as it can be more challenging to correctly
+set up. Once you're done with the VirtualBox guide please return here, to read the
+[Some important things to know once Ubuntu is
+Installed](#Some-important-things-to-know-once-Ubuntu-is-Installed) section*
+
+1) Download **Ubuntu 18.04 desktop image** by clicking the following link: http://releases.ubuntu.com/18.04/ and selecting the appropriate desktop version for your PC. This will download a .iso file onto your PC.
+2) Download **VMware Workstation Player** from the following link: https://www.vmware.com/uk/products/workstation-player.html p.s. You want to download the suitable one for your current OS. For example the **Windows VM** for a **Windows OS**.
+![VM_download_1](Linux_guide_pics/VM_download_1.PNG)
+4) Run VMware and, once it has loaded, select **Create a New Virtual Machine**.
+5) Select **Installer disc image file (iso)** and browse for the Ubuntu desktop image then click **Next**.
+6) Follow the installation guide - you will also be asked to specify the disk size and whether you wish for the virtual disk to be stored as a single file or as multiple files. Here you could just follow the recommended or default settings.
+
+### Common Issues
+You may find that the virtual disk keeps crashing due to a few issues
+* Not enough space on hard drive - remedied by freeing up space on your hard drive
+* You have an anti virus software installed that is conflicted with VMware - remedied by changing the anti virus software
+* Too slow? - you may find that navigating the basic Linux interface is slow, this is often due to a lack of available RAM. You can attempt to allocate the VM more RAM by pressing **"Edit virtual machine settings"** in the VM menu (_shown in the first image below_). You will then be greeted with a slider (_shown in the second image below_) that will allow you to change the amount of allocated RAM. **However, be aware that the available RAM is limited and other processes on the computer may slow down if too much RAM is allocated to the VM.** This issue may also be due to having other processes running in the background, so you can also try closing all other Windows and applications to improve speed.
+
+    ![VM_RAM](Linux_guide_pics/VM_RAM.PNG)
+    ![RAM](Linux_guide_pics/RAM.PNG)
+
+## Some important things to know once Ubuntu is Installed
+
+These are some important things to note and some commonly encounter issues that people
+have once they install Ubuntu. Please at least skim read the heading so that if/when they
+happen to you, you won't be alarmed! If you encounter any other issues that you think
+could be added to this guide please let us know.
+
+### Do not upgrade to a newer version of Ubuntu
+Usually Ubuntu will tell you that you have installed an old version of Ubuntu and ask if
+you would like to upgrade to a newer version. Click No, obviously you don't want to do that
+because you want to use ROS Melodic!
+
+### Problems using sudo apt update
+You may encounter an error stating: **"unable to acquire the dpkg frontend lock
+(/var/lib/dpkg/lock-frontend), is another process using it?"**. This means that the OS
+is currently searching for updates, so you can't use your package manager. The solution
+is to wait a while and let it finish. If it seems like it is taking an unreasonable amount
+of time you can try restarting.
+
+Similarly, a Software update pop-up may appear and ask you to
+update using the graphical user interface rather than the terminal, just close this
+because you will be updating using the command line later in the guide.
+
+## Keyboard layout
+Sometimes after installing linux you may find that certain keys are in a differnt position to what you are used to. This may be because the linux you have installed is using a different keyboard layout. 
+
+In order to change your keyboard layout go to **settings** > **Language and Region** > Then click the **'+'** sign and add the keyboard in the languague of your choosing.
+
+![Linux_keyboard](Linux_guide_pics/Linux_keyboard.PNG)
+
+In the case that you have special characters in your password and are unable to login due to the change in keyboard, we will attach mappings of important keys for both the **English(US)** and **English(UK)** keyboards.
+
+**UK English keyboard:**
+![UK_keyboard](Linux_guide_pics/UK_keyboard.PNG)
+
+**US English keyboard:**
+![US_keyboard](Linux_guide_pics/US_keyboard.PNG)
+
+### Wifi doesn't work
+
+If you installed Ubuntu as a dual boot or main OS you may find that your **Wi-fi is not connecting**.
+A few solutions to this include:
+
+1) Simply restarting the computer - this could work if your Linux recognises other networks but fails to connect to them.
+2) Connecting the PC to your internet via a wired connection and downloading updates - once connected, open the terminal (by hitting Ctrl+Alt+T) and type into the terminal
+```
+sudo apt update && sudo apt upgrade 
+```
+* Reboot Ubuntu. 
+
+## How to access your BIOS/Boot menu
 These keys are usually either **F1**, **F2**, **F10**, **F12** or **Del**. If you don't know the key you may be able to find out by googling **BIOS key for [*input your computer model*]**. Or just try each of the ones we mentioned at least once.
 
 If your PC isn't taking you to the Boot Menu even though you are pressing the correct keys - this could be due to your PC starting up too quickly. Here are a few methods to get around this:
@@ -96,55 +224,6 @@ BIOS/ UEFI. This is the first tip described in this video: https://youtu.be/yPLv
 5) If the above two methods have not solved the issue then the PC can be forced to go to the menu described in the first method by turning the PC off completely through holding the **power button** until loss of power. Then turn on and off again once it begins to load until the computer begins to run a **recovery process**. Usually after repeating the process 3 times. **Warning: This is a last resort and it could be done a lot easier by using the first method**.
 6) For those still struggling here is another video to help reach the BIOS: https://youtu.be/IMr5-mEbhTs.
 
-Once you've found yourself at the Boot Menu (in the BIOS) you will either need to move the **Boot from USB drive** to the **top of the list**, or select **USB drive**.
-
-If the install for Linux doesn't appear and the computer still runs Windows, you can temporarily disable the **Windows boot manager** in the BIOS, then try again.
-
-### Linux Install
-Once your PC has booted from the USB drive, you will see a purple GNU which you can use to select to boot Ubuntu.
-
-You will be given the option to either run Linux without installation, or to install Linux. Selecting install Linux will take you to the installation guide. You can then pick to install Linux alongside your OS or to erase your disk and install Linux (this will wipe out your current OS along with any files you have such that the only thing is Linux).
-![Ubuntu_choice](Linux_guide_pics/Ubuntu_choice.png)
-
-**Warning:** We recommend choosing whether to run Linux alongside your OS, or to erase the disk, before picking an option, as it will be extremely difficult to change your mind after the process is done. You have been warned!!
-
-### Common Issues 
-**Wi-fi not connecting:** you may find that, following installation, Ubuntu doesn't want to connect to the internet. A few solutions to this include:
-
-1) Simply restarting the computer - this could work if your Linux recognises other networks but fails to connect to them.
-2) Connecting the PC to your internet via a wired connection and downloading updates - once connected, open the terminal (by hitting Ctrl+Alt+T) and type into the terminal
-```
-sudo apt update && sudo apt upgrade 
-```
-* reboot the Linux. 
-* You may encounter an error stating: **"unable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), is another process using it?"**. If this error depicted comes up there are a few possible options to try, this link goes through each of them: https://itsfoss.com/could-not-get-lock-error/. Though it is likely you will just need to wait a while for background updates to complete.
-
-
-## Installation via virtual machine
-If preparing a bootable disk and running it on your PC is too much of a hassle, then you could, alternatively, run Linux via a virtualisation on your PC. To do this, you will need to download a virtual machine such as **VMware**.
-
-*Note: if you are unable to use VMWare because you use an IT managed PC/Laptop and have to
-use VirtualBox, follow the [**Installing VirtualBox guide** in this
-repo](Installing%20VirtualBox.md). We **strongly** recommend not using VirtualBox if you
-are new to virtual machines and have a choice, as it can be more challenging to correctly set up.*
-
-1) Download **Ubuntu 18.04 desktop image** by clicking the following link: http://releases.ubuntu.com/18.04/ and selecting the appropriate desktop version for your PC. This will download a .iso file onto your PC.
-2) Download **VMware Workstation Player** from the following link: https://www.vmware.com/uk/products/workstation-player.html p.s. You want to download the suitable one for your current OS. For example the **Windows VM** for a **Windows OS**.
-![VM_download_1](Linux_guide_pics/VM_download_1.PNG)
-4) Run VMware and, once it has loaded, select **Create a New Virtual Machine**.
-5) Select **Installer disc image file (iso)** and browse for the Ubuntu desktop image then click **Next**.
-6) Follow the installation guide - you will also be asked to specify the disk size and whether you wish for the virtual disk to be stored as a single file or as multiple files. Here you could just follow the recommended or default settings.
-
-### Common Issues
-You may find that the virtual disk keeps crashing due to a few issues
-* Not enough space on hard drive - remedied by freeing up space on your hard drive
-* You have an anti virus software installed that is conflicted with VMware - remedied by changing the anti virus software
-* You haven't enabled virtualisation in your Bios settings (common if you have a new computer) - reboot computer and press either the *F1*, *F2*, *F4* *Delete* or the *Esc* keys.
-* Too slow? - you may find that navigating the basic Linux interface is slow, this is often due to a lack of available RAM. You can attempt to allocate the VM more RAM by pressing **"Edit virtual machine settings"** in the VM menu (_shown in the first image below_). You will then be greeted with a slider (_shown in the second image below_) that will allow you to change the amount of allocated RAM. **However, be aware that the available RAM is limited and other processes on the computer may slow down if too much RAM is allocated to the VM.** This issue may also be due to having other processes running in the background, so you can also try closing all other Windows and applications to improve speed.
-
-    ![VM_RAM](Linux_guide_pics/VM_RAM.PNG)
-    ![RAM](Linux_guide_pics/RAM.PNG)
-
 # Linux Cheat Sheet
 Upon installing Linux it may seem daunting to navigate your way around, but worry not we have provided a few handy tips, directions and advice to get you accustomed to Linux as quickly as possible.
 
@@ -154,20 +233,6 @@ As some may not have used Linux before we have prepared a few important key shor
 * **ctrl-shift-V**: paste in the terminal
 * There is also a list of all the keyboard shortcuts for linux located at **Settings** > **Devices** > **Keyboard**.
 
-## Keyboard layout
-Sometimes after installing linux you may find that certain keys are in a differnt position to what you are used to. This may be because the linux you have installed is using a different keyboard layout. 
-
-In order to change your keyboard layout go to **settings** > **Language and Region** > Then click the **'+'** sign and add the keyboard in the languague of your choosing.
-
-![Linux_keyboard](Linux_guide_pics/Linux_keyboard.PNG)
-
-In the case that you have special characters in your password and are unable to login due to the change in keyboard, we will attach mappings of important keys for both the **English(US)** and **English(UK)** keyboards.
-
-**UK English keyboard:**
-![UK_keyboard](Linux_guide_pics/UK_keyboard.PNG)
-
-**US English keyboard:**
-![US_keyboard](Linux_guide_pics/US_keyboard.PNG)
 
 # Glossary
 **BIOS - Basic Input/Output System**: the BIOS (pronounced bye-oss) is a ROM chip found on motherboards that allows you to access and set up your computer system at the most basic level. 
